fixed wrong constraint name